deploy/k8s/deployment-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: skpasta-dev
  labels:
    app: skpasta-dev
spec:
  ports:
  - port: 8080
    protocol: TCP
  #clusterIP: None
  type: LoadBalancer
  selector:
    app: skpasta-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skpasta-dev
  labels:
    app: skpasta-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skpasta-dev
  template:
    metadata:
      labels:
        app: skpasta-dev
    spec:
      containers:
      - name: skpasta-dev
        image: skpasta-dev
