deploy/k8s/deployment-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: skpasta-prod
  labels:
    app: skpasta-prod
spec:
  ports:
  - port: 8080
    protocol: TCP
  #clusterIP: None
  type: LoadBalancer
  selector:
    app: skpasta-prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skpasta-prod
  labels:
    app: skpasta-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: skpasta-prod
  template:
    metadata:
      labels:
        app: skpasta-prod
    spec:
      containers:
      - name: skpasta-prod
        image: skaf-pasta-ror7
        # command:
        # - "./entrypoint-8080.sh"
