deploy/k8s/gke-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skpasta-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: skpasta-dev # skaf-pasta-ror7 # hello-world-1
            port:
              number: 80
      # - path: /prod
      #   pathType: ImplementationSpecific
      #   backend:
      #     service:60000
      #       name: hello-world-2
      #       port:
      #         number: 80
